Handle Image in Event