@@ -1,12 +1,22 @@
 package gov.iti.evento.services.util.converters;
 
 import java.io.ByteArrayOutputStream;
+import java.io.File;
 import java.io.InputStream;
 import java.net.URL;
 
 public class ImageConverter {
     public static byte[] recoverImageFromUrl(String urlText) throws Exception {
-        URL url = new URL(urlText);
+        System.out.println(urlText);
+
+        URL url;
+        if (urlText.startsWith("file:")) {
+            url = new URL(urlText);
+        } else {
+            File file = new File(urlText);
+            url = file.toURI().toURL();
+        }
+
         ByteArrayOutputStream output = new ByteArrayOutputStream();
 
         try (InputStream inputStream = url.openStream()) {
